inilib/ini.cpp
#ifdef WIN32
#pragma warning(disable:4099)
#endif
/* Generated by re2c 0.13.5 on Tue Jan  6 20:11:58 2009 */
#line 1 "ini.cc.re2c"
/*
    This file is part of M's INI file format library

    M's INI file format library is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    M's INI file format library is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with M's INI file format library.  If not, see <http://www.gnu.org/licenses/>.
*/

#include "ini.h"


using namespace std;

ini_document::section::option::option()
{
}


ini_document::section::option::option(string label, string value, string comment)
{
	this->label = label;
	this->value = value;
	this->comment = comment;
}


ini_document::section::option::~option()
{ }


ini_document::section::section()
{ }


ini_document::section::section(string name, string comment)
{
	this->name = name;
	this->comment = comment;
}


ini_document::section::~section()
{
}


std::string ini_document::section::operator[](const std::string &label)
{
	vector<class ini_document::section::option>::iterator i;
	for(i = this->option_list.begin(); i != this->option_list.end(); i++)
	{
		if( (*i).label == label)
		{
			return (*i).value;
		}
	}

	// if it doesn't exist then create one just for kicks
	return string();
}


void ini_document::section::pushOption(string name, string value, string comment)
{
	this->option_list.push_back(option(name, value, comment));
}


void ini_document::section::pushComment(string comment)
{
	this->option_list.push_back(option(string(), string(), comment));
}


ini_document::section & ini_document::section::operator=(const ini_document::section &rhs)
{
	this->name = rhs.name;
	this->comment = rhs.comment;
	this->option_list = rhs.option_list;
	return *this;
}


ini_document::ini_document()
{
	p = q = marker = limit = eos = &buffer[0];

	set_error_output(cerr);
}


ini_document::~ini_document()
{
}



class ini_document::section & ini_document::operator[] (const string name)
{
	vector<ini_document::section>::iterator i;
	for(i = this->section_list.begin(); i != this->section_list.end(); i++)
	{
		if( (*i).name == name)
		{
			return *i;
		}
	}

	// if it doesn't exist then create one just for kicks
	this->section_list.push_back(section(name));
	return this->section_list.back();
}



class ini_document::section & ini_document::createSection(string name, string comment)
{
	this->section_list.push_back(section(name, comment));
	return this->section_list.back();
}



void ini_document::toOutputStream(ostream &o)
{
	vector<ini_document::section>::iterator is;
	vector<ini_document::section::option>::iterator io;
	for(is = this->section_list.begin(); is != this->section_list.end(); is++)
	{
		if( (*is).name.empty() )	/* is it a comment line? */
		{
			if( (*is).comment.empty() )
				o << "\n";
			else
				o << ";" << (*is).comment << "\n";
		}
		else	/* output the section name */
		{
			o << "[" << (*is).name << "]";
			if( (*is).comment.empty() )
				o << endl;
			else
				o << "; " << (*is).comment << "\n";
			/* output the options */
			for( io = (*is).option_list.begin(); io != (*is).option_list.end(); io++ )
			{
				if( (*io).label.empty() )
				{
					//TODO perform error checking
					if( (*io).comment.empty() )
					{
					}
					else
					{
						o << ";" << (*io).comment << "\n";
					}
				}
				else
				{
					o << (*io).label << " = " << (*io).value;
					if( (*io).comment.empty() )
					{
						o << "\n";
					}
					else
					{
						o << "\t; " << (*io).comment << "\n";
					}

				}
			}
		}
		o << endl;
	}
}


ini_document ini_document::fromInputStream(std::istream &is)
{
	using namespace std;
	string label, value;
	section *current_section = NULL;

	size_t line_count = 1;

	int token_value = 0;
	int state = 0;
	while( token_value != EOS )
	{
		switch(state)
		{
			case 0:	// default state
				switch( token_value = lexer(is) )
				{
					case '[':
						state = 1;	// start section
						break;

					case SECTION:
						label = token;
						state = 3;	// wait for assign
						break;

					case TEXT:	// section-less label-value pair
						label = token;
						state = 4;	// wait for assign
						break;

					case COMMENT:
						if(current_section == NULL)
						{
							current_section = &this->createSection("");
						}
						current_section->pushComment(token);
						state = 30; 	// wait for EOL
						break;

					case WS:
						break;

					case EOL:
					case EOS:
						++line_count;
						break;

					default:
						*out << "ini parser error at line " << line_count << endl;
						state = 31;	// wait until EOL
						break;
				}
				break;

			case 1:	// start section
				switch( token_value = lexer(is) )
				{
					case TEXT:
						label = token;
						state = 2;	// close section
						break;

					default:
						*out << "ini parser error at line " << line_count << endl;
						state = 31;	// wait until EOL
						break;
				}
				break;

			case 2:	// close section
				switch( token_value = lexer(is))
				{
					case ']':
						state = 3;	// followup on close section
						break;

					default:
						*out << "ini parser error at line " << line_count << endl;
						state = 31;	// wait until EOL
						break;
				}
				break;

			case 3:	// followup on close section
				switch( token_value = lexer(is) )
				{
					case COMMENT:
						current_section = &this->createSection(label, token);
						state = 30;	// wait for EOL
						break;

					case WS:
						break;

					case EOL:
					case EOS:
						++line_count;
						current_section = &this->createSection(label);
						state = 0;
						break;

					default:
						*out << "ini parser error at line " << line_count << endl;
						state = 31;	// wait until EOL
						break;
				}
				break;

			case 4:	// wait for assign
				switch( token_value = lexer(is) )
				{
					case '=':
						state = 5;	// wait for value
						break;

					case WS:
						break;

					default:
						*out << "ini parser error at line " << line_count << endl;
						state = 31;	// wait until EOL
						break;
				}
				break;

			case 5:	// wait for value
				switch( token_value = lexer(is) )
				{
					case TEXT:
					case ESCAPED_TEXT:
						value = token;
						state = 6;	// wait for EOL or comment
						break;

					case WS:
						break;

					case EOS:
					case EOL:
						++line_count;
						if(current_section == NULL)
							current_section = &this->createSection("");
						current_section->pushOption(label,"");
						state = 0;
						break;

					default:
						*out << "ini parser error at line " << line_count << endl;
						state = 31;	// wait until EOL
						break;
				}
				break;

			case 6:	// wait for EOL or comment
				switch( token_value = lexer(is) )
				{
					case EOS:
					case EOL:
						++line_count;
						if(current_section == NULL)
							current_section = &this->createSection("");
						current_section->pushOption(label,value);
						state = 0;
						break;

					case COMMENT:
						if(current_section == NULL)
							current_section = &this->createSection("");
						current_section->pushOption(label,value, token);
						state = 30; // wait for EOL
						break;

					case WS:
						break;

					default:
						*out << "ini parser error at line " << line_count << endl;
						state = 31;	// wait until EOL
						break;
				}
				break;

			case 30:	// wait for EOL
				switch( token_value = lexer(is))
				{
					case WS:
						break;

					case EOS:
					case EOL:
						++line_count;
						state = 0;
						break;

					default:
						*out << "ini parser error at line " << line_count << endl;
						state = 31;	// wait unconditionally until EOL
						break;
				}
				break;

			case 31:	// wait unconditionally for EOL
				switch( token_value = lexer(is) )
				{
					case EOS:
					case EOL:
						++line_count;
						state = 0;
						break;

					default:
						break;
				}
				break;

			default:
				*out << "This is a bug: renegade state" << endl;
		}


	}
	return *this;
}

int ini_document::lexer(std::istream &is)
{
	using namespace std;
#define YYFILL(n)	{ fill(is); }

#line 420 "<stdout>"
{
	char yych;
	unsigned int yyaccept = 0;

	if ((limit - p) < 201) YYFILL(201);
	yych = *p;
	switch (yych) {
	case '\t':
	case ' ':	goto yy10;
	case '\n':	goto yy12;
	case '\r':	goto yy14;
	case '"':	goto yy8;
	case ';':	goto yy9;
	case '=':	goto yy4;
	case '[':	goto yy2;
	default:	goto yy6;
	}
yy2:
	yyaccept = 0;
	yych = *(marker = ++p);
	switch (yych) {
	case '\n':
	case '\r':
	case '[':
	case ']':	goto yy3;
	default:	goto yy691;
	}
yy3:
#line 430 "ini.cc.re2c"
	{ return ERROR; }
#line 451 "<stdout>"
yy4:
	++p;
#line 424 "ini.cc.re2c"
	{ return (int)*q++;}
#line 456 "<stdout>"
yy6:
	++p;
	switch ((yych = *p)) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':
	case '=':	goto yy7;
	default:	goto yy613;
	}
yy7:
#line 425 "ini.cc.re2c"
	{ token.clear(); token.assign(q,p-q); q=p; return TEXT;}
#line 470 "<stdout>"
yy8:
	yyaccept = 1;
	yych = *(marker = ++p);
	switch (yych) {
	case '\t':
	case ' ':
	case '=':	goto yy298;
	case '\n':
	case '\r':	goto yy7;
	case '"':	goto yy300;
	default:	goto yy297;
	}
yy9:
	yych = *++p;
	switch (yych) {
	case '\t':
	case ' ':
	case '=':	goto yy18;
	case '\n':
	case '\r':	goto yy7;
	default:	goto yy17;
	}
yy10:
	++p;
	yych = *p;
	goto yy16;
yy11:
#line 428 "ini.cc.re2c"
	{q=p;return WS;}
#line 500 "<stdout>"
yy12:
	++p;
#line 429 "ini.cc.re2c"
	{ ++q; return (p==eos)? EOS : EOL;}
#line 505 "<stdout>"
yy14:
	yych = *++p;
	goto yy3;
yy15:
	++p;
	if (limit <= p) YYFILL(1);
	yych = *p;
yy16:
	switch (yych) {
	case '\t':
	case ' ':	goto yy15;
	default:	goto yy11;
	}
yy17:
	yych = *++p;
	switch (yych) {
	case '\t':
	case ' ':
	case '=':	goto yy20;
	case '\n':
	case '\r':	goto yy7;
	default:	goto yy219;
	}
yy18:
	++p;
	switch ((yych = *p)) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy20;
	}
yy19:
#line 427 "ini.cc.re2c"
	{ token.clear(); token.assign(q+1,p-q-1); q=p; return COMMENT; }
#line 539 "<stdout>"
yy20:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy21;
	}
yy21:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy22;
	}
yy22:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy23;
	}
yy23:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy24;
	}
yy24:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy25;
	}
yy25:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy26;
	}
yy26:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy27;
	}
yy27:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy28;
	}
yy28:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy29;
	}
yy29:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy30;
	}
yy30:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy31;
	}
yy31:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy32;
	}
yy32:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy33;
	}
yy33:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy34;
	}
yy34:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy35;
	}
yy35:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy36;
	}
yy36:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy37;
	}
yy37:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy38;
	}
yy38:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy39;
	}
yy39:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy40;
	}
yy40:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy41;
	}
yy41:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy42;
	}
yy42:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy43;
	}
yy43:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy44;
	}
yy44:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy45;
	}
yy45:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy46;
	}
yy46:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy47;
	}
yy47:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy48;
	}
yy48:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy49;
	}
yy49:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy50;
	}
yy50:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy51;
	}
yy51:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy52;
	}
yy52:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy53;
	}
yy53:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy54;
	}
yy54:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy55;
	}
yy55:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy56;
	}
yy56:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy57;
	}
yy57:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy58;
	}
yy58:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy59;
	}
yy59:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy60;
	}
yy60:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy61;
	}
yy61:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy62;
	}
yy62:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy63;
	}
yy63:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy64;
	}
yy64:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy65;
	}
yy65:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy66;
	}
yy66:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy67;
	}
yy67:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy68;
	}
yy68:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy69;
	}
yy69:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy70;
	}
yy70:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy71;
	}
yy71:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy72;
	}
yy72:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy73;
	}
yy73:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy74;
	}
yy74:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy75;
	}
yy75:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy76;
	}
yy76:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy77;
	}
yy77:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy78;
	}
yy78:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy79;
	}
yy79:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy80;
	}
yy80:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy81;
	}
yy81:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy82;
	}
yy82:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy83;
	}
yy83:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy84;
	}
yy84:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy85;
	}
yy85:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy86;
	}
yy86:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy87;
	}
yy87:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy88;
	}
yy88:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy89;
	}
yy89:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy90;
	}
yy90:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy91;
	}
yy91:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy92;
	}
yy92:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy93;
	}
yy93:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy94;
	}
yy94:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy95;
	}
yy95:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy96;
	}
yy96:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy97;
	}
yy97:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy98;
	}
yy98:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy99;
	}
yy99:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy100;
	}
yy100:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy101;
	}
yy101:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy102;
	}
yy102:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy103;
	}
yy103:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy104;
	}
yy104:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy105;
	}
yy105:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy106;
	}
yy106:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy107;
	}
yy107:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy108;
	}
yy108:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy109;
	}
yy109:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy110;
	}
yy110:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy111;
	}
yy111:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy112;
	}
yy112:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy113;
	}
yy113:
	yych = *++p;
	switch (yych) {
	case '\n':
	case '\r':	goto yy19;
	default:	goto yy114;
	}
yy114:
	yych = *++p;
